messaging_app/messaging_app/blue_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: django-messaging-blue
  labels:
    app: messaging-app
spec:
  replicas: 3
  minReadySeconds: 10
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  selector:
    matchLabels:
      app: messaging-app
      version: "2.0"
  template:
    metadata:
      labels:
        app: messaging-app
        version: "2.0"
    spec:
      containers:
        - name: messaging-app
          image: root/messaging_app:v2.0
          ports:
            - containerPort: 8000
            readinessProbe:
              httpGet:
                path: /health/
                port: 8000
            initialDelaySeconds: 5
            periodSeconds: 5
